src/objects/PF_TestCaseExecution__c.object
<CustomObject>
    <description>pForce</description>
    <fields>
        <fullName>PF_Date_of_Run__c</fullName>
        <label>Date of Run</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Run_Comments__c</fullName>
        <label>Execution Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PF_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Test_Case__c</fullName>
        <label>Test Case</label>
        <referenceTo>PF_TestCases__c</referenceTo>
        <relationshipLabel>Test Case Executions</relationshipLabel>
        <relationshipName>Test_Case_Executions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PF_Test_Execution_Type__c</fullName>
        <label>Test Execution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Test Case Execution</label>
    <nameField>
        <displayFormat>TCE-{00000}</displayFormat>
        <label>Test Case Execution #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Case Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>